--- a/index.html
+++ b/index.html
@@ -5,10 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <title>PizzaShop</title>
 </head>
 <body>
-    
+    <header>
+        <div class="logo">
+            <img src="./assets/img/pngtree-cartoon-yellow-pizza-illustration-png-image_4634672-removebg-preview.png" alt="Logo inicial">
+            <h3>PizzaShop</h3>
+        </div>
+        <nav>
+           <ul class="list-menu">
+            <li><a href="#">HOME</a></li>
+            <li><a href="#">Sobre Nós</a></li>
+            <li><a href="#">Cardápio</a></li>
+            <li><a href="#">Contatos</a></li>
+            <li><a href="#"><i class="bi bi-instagram"></i></a></li>
+            <li><a href="#"><i class="bi bi-facebook"></i></a></li>
+            <li><a href="#"><i class="bi bi-cart4"></i></a></li>
+           </ul>
+        </nav>
+    </header>
 
 
 
